Added modified files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="../odin-recipes/recipes/gajarhalwa.html"><strong>Gajar Ka Halwa</strong></a></p>
+        <ol>
+            <li><a href="../odin-recipes/recipes/gajarhalwa.html"><i>Garjar Ka Halwa</i></a></li>
+            <li><a href="../odin-recipes/recipes/tandoorichicken.html"></a><i>Tandoori Chicken</i></li>
+        </ol>
     </body>
 </html>
