--- a/recipes/gajarhalwa.html
+++ b/recipes/gajarhalwa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Recipe</title>
+        <title>Halwa</title>
         <meta charset="UTF-8">
     </head>
 
