--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <ol>
-            <li><a href="../odin-recipes/recipes/gajarhalwa.html"><i>Garjar Ka Halwa</i></a></li>
-            <li><a href="../odin-recipes/recipes/tandoorichicken.html"></a><i>Tandoori Chicken</i></li>
+            <li><a href="../odin-recipes/recipes/gajarhalwa.html"><i>Gajar Ka Halwa</i></a></li>
+            <li><a href="../odin-recipes/recipes/tandoorichicken.html"><i>Tandoori Chicken</i></a></li>
         </ol>
     </body>
 </html>
